tests/ui/on-unimplemented/issue-104140.stderr
error: malformed `crablangc_on_unimplemented` attribute input
  --> $DIR/issue-104140.rs:5:1
   |
LL | #[crablangc_on_unimplemented]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[crablangc_on_unimplemented = "message"]
   | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
LL | #[crablangc_on_unimplemented(/*opt*/ message = "...", /*opt*/ label = "...", /*opt*/ note = "...")]
   | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to previous error

